--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,25 +1,30 @@
 use_frameworks!
 
+# 推荐继续使用 传统的 pod
+source 'https://github.com/CocoaPods/Specs.git'
+#source 'https://cdn.cocoapods.org/'
+
+
 target 'PoporFoundation_Example' do
-    pod 'PoporFoundation', :path => '../'
-    #pod 'PoporFoundation/NSArray', :path => '../'
-    
+  pod 'PoporFoundation', :path => '../'
+  #pod 'PoporFoundation/NSArray', :path => '../'
+  
   target 'PoporFoundation_Tests' do
     inherit! :search_paths
-
+    
     
   end
 end
 
 
 target 'PoporFoundationMac' do
-    pod 'PoporFoundation', :path => '../'
-    #pod 'PoporFoundation/NSArray', :path => '../'
-    
+  pod 'PoporFoundation', :path => '../'
+  #pod 'PoporFoundation/NSArray', :path => '../'
+  
 end
 
 target 'PoporFoundationTV' do
-    pod 'PoporFoundation', :path => '../'
-    #pod 'PoporFoundation/NSArray', :path => '../'
-    
+  pod 'PoporFoundation', :path => '../'
+  #pod 'PoporFoundation/NSArray', :path => '../'
+  
 end
